Fri May 30 19:33:36 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CCF/DesignNotes:
        * CCF/Makefile:
        * CCF/Version:
        * CCF/CCF/CCF.sln:
        * CCF/CCF/Makefile:
        * CCF/CCF/CIDL/CIDL.cpp:
        * CCF/CCF/CIDL/CIDL.vcproj:
        * CCF/CCF/CIDL/CIDL_LexicalAnalyzer.hpp:
        * CCF/CCF/CIDL/CIDL_Parser.hpp:
        * CCF/CCF/CIDL/CIDL_SemanticAction.hpp:
        * CCF/CCF/CIDL/CIDL_SemanticActionImpl.hpp:
        * CCF/CCF/CIDL/CIDL_SyntaxTree.cpp:
        * CCF/CCF/CIDL/CIDL_SyntaxTree.hpp:
        * CCF/CCF/CIDL/CIDL_SyntaxTreeFwd.hpp:
        * CCF/CCF/CIDL/CIDL_Traversal.cpp:
        * CCF/CCF/CIDL/CIDL_Traversal.hpp:
        * CCF/CCF/CIDL/MSVC_Pragmas.hpp:
        * CCF/CCF/CIDL/Makefile:
        * CCF/CCF/CodeGenerationKit/CodeGenerationKit.cpp:
        * CCF/CCF/CodeGenerationKit/CodeGenerationKit.vcproj:
        * CCF/CCF/CodeGenerationKit/CommandLine.cpp:
        * CCF/CCF/CodeGenerationKit/CommandLine.hpp:
        * CCF/CCF/CodeGenerationKit/CommandLineDescriptor.hpp:
        * CCF/CCF/CodeGenerationKit/CommandLineGrammar.cpp:
        * CCF/CCF/CodeGenerationKit/CommandLineGrammar.hpp:
        * CCF/CCF/CodeGenerationKit/CommandLineParser.cpp:
        * CCF/CCF/CodeGenerationKit/CommandLineParser.hpp:
        * CCF/CCF/CodeGenerationKit/IDLStream.hpp:
        * CCF/CCF/CodeGenerationKit/MSVC_Pragmas.hpp:
        * CCF/CCF/CodeGenerationKit/Makefile:
        * CCF/CCF/CodeGenerationKit/Regex.hpp:
        * CCF/CCF/CompilerElements/DiagnosticStream.cpp:
        * CCF/CCF/CompilerElements/DiagnosticStream.hpp:
        * CCF/CCF/CompilerElements/ExH.hpp:
        * CCF/CCF/CompilerElements/FileSystem.hpp:
        * CCF/CCF/CompilerElements/MSVC_Pragmas.hpp:
        * CCF/CCF/CompilerElements/Parser.hpp:
        * CCF/CCF/CompilerElements/Preprocessor.hpp:
        * CCF/CCF/CompilerElements/ReferenceCounting.hpp:
        * CCF/CCF/CompilerElements/SemanticAction.hpp:
        * CCF/CCF/CompilerElements/Token.hpp: